--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
-  "version": 2,
+  "installCommand": "yarn install",
+  "buildCommand": "yarn build",
+  "outputDirectory": "dist",
   "builds": [
     {
       "src": "src/main.ts",
