--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^6.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "env-var": "^7.3.0",
     "pagedjs-cli": "^0.3.4",
     "passport": "^0.6.0",
     "passport-custom": "^1.1.1",
