--- a/docs/docker/.env.example
+++ b/docs/docker/.env.example
@@ -1,5 +1,5 @@
-NODE_ENV=production
+ENVIRONMENT=production
 MAX_TIMEOUT=10000
-API_KEY=
-JWT_SECRET=
+ADDITIONAL_SCRIPTS=["http://elliot:3000/static/handler/image-loading-handler.js", "http://elliot:3000/static/handler/relative-to-absolute-static-files-handler.js"]
+SECRET_KEY=
 BROWSERLESS_TOKEN=
