--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 MAX_TIMEOUT=10000
 DEBUG=false
-# API_KEY=
-# JWT_SECRET=
+# ADDITIONAL_SCRIPTS=
+# SECRET_KEY=
 # BROWSERLESS_ENDPOINT=
