--- a/docs/docker/docker-compose.yml
+++ b/docs/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   elliot:
-    image: valentinschabschneider/elliot:latest
+    image: valentinschabschneider/elliot:0.2.0
     environment:
       NODE_ENV: ${ENVIRONMENT}
       ADDITIONAL_SCRIPTS: ${ADDITIONAL_SCRIPTS}
@@ -16,13 +16,21 @@ services:
   browserless:
     image: browserless/chrome:1.58-puppeteer-19.7.5
     environment:
-      DEBUG: browserless:*
       MAX_CONCURRENT_SESSIONS: 10
       CONNECTION_TIMEOUT: 60000
       MAX_QUEUE_LENGTH: 20
       PREBOOT_CHROME: true
       DEMO_MODE: false
       ENABLE_DEBUGGER: false
-      TOKEN: ${BROWSERLESS_TOKEN}
-      PORT: 3000
       WORKSPACE_DELETE_EXPIRED: true
+      TOKEN: ${BROWSERLESS_TOKEN}
+    restart: unless-stopped
+
+  redis:
+    image: redis:6.2-alpine
+    volumes:
+      - redis-data:/data
+    restart: unless-stopped
+
+volumes:
+  redis-data:
