Added header inject, more state and concurrency

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ NODE_ENV=development
 MAX_TIMEOUT=10000
 PERSIST_PERIOD=3600000
 DEBUG=false
+QUEUE_CONCURRENCY=10
 # ADDITIONAL_SCRIPTS=
 # SECRET_KEY=
 # BROWSERLESS_ENDPOINT=
