--- a/docs/docker/docker-compose.yml
+++ b/docs/docker/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       NODE_ENV: ${ENVIRONMENT}
       MAX_TIMEOUT: ${MAX_TIMEOUT}
       PERSIST_PERIOD: ${PERSIST_PERIOD}
+      QUEUE_CONCURRENCY: ${QUEUE_CONCURRENCY}
       ADDITIONAL_SCRIPTS: ${ADDITIONAL_SCRIPTS}
       SECRET_KEY: ${SECRET_KEY}
       BROWSERLESS_ENDPOINT: ws://browserless:3000?token=${BROWSERLESS_TOKEN}
