Add prettier to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 
   // The optional 'workspaceFolder' property is the path VS Code should open by default when
   // connected. This is typically a file mount in .devcontainer/docker-compose.yml
-  "workspaceFolder": "/usr/src/app"
+  "workspaceFolder": "/usr/src/app",
 
   // Features to add to the dev container. More info: https://containers.dev/features.
   // "features": {},
@@ -31,7 +31,9 @@
   // "postCreateCommand": "cat /etc/os-release",
 
   // Configure tool-specific properties.
-  // "customizations": {},
+  "customizations": {
+    "vscode": { "extensions": ["esbenp.prettier-vscode@9.10.4"] }
+  }
 
   // Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "devcontainer"
