--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@ PERSIST_PERIOD=3600000
 DEBUG=false
 QUEUE_CONCURRENCY=10
 # ADDITIONAL_SCRIPTS=
+# HTTP_HEADERS=
 # SECRET_KEY=
+# REDIS_URL
 # BROWSERLESS_ENDPOINT=
