--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
   "watchOptions": {
     "watchFile": "dynamicPriorityPolling",
     "watchDirectory": "dynamicPriorityPolling",
-    "excludeDirectories": ["**/node_modules", "dist"]
+    "excludeDirectories": ["**/node_modules", "./dist"]
   }
 }
