--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       args:
         NODE_BASE_IMAGE: node:19
     environment:
-      CHOKIDAR_USEPOLLING: true
+      - CHOKIDAR_USEPOLLING=true
     volumes:
       - .:/usr/src/app:cached
       - /usr/src/app/node_modules
