Added cleanupJobAfterCollection flag

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ MAX_TIMEOUT=10000
 PERSIST_PERIOD=3600000
 DEBUG=false
 QUEUE_CONCURRENCY=10
+CLEANUP_JOB_AFTER_COLLECTED=false
 # ADDITIONAL_SCRIPTS=
 # HTTP_HEADERS=
 # SECRET_KEY=
