Added ENABLE_DASHBOARDS flag

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ PERSIST_PERIOD=3600000
 DEBUG=false
 QUEUE_CONCURRENCY=10
 CLEANUP_JOB_AFTER_COLLECTED=false
+ENABLE_DASHBOARDS=true
 # ADDITIONAL_SCRIPTS=
 # HTTP_HEADERS=
 # SECRET_KEY=
