--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       NODE_ENV: development
       REDIS_URL: redis://redis:6379
       BROWSERLESS_ENDPOINT: ws://browserless:3000
+      ENABLE_DASHBOARDS: true
     ports:
       - 3000:3000
     depends_on:
