rename secret key to api key

--- a/docs/docker/.env.example
+++ b/docs/docker/.env.example
@@ -4,5 +4,5 @@ PERSIST_PERIOD=3600000
 QUEUE_CONCURRENCY=10
 ADDITIONAL_SCRIPTS=["http://elliot:3000/static/handler/image-loading-handler.js", "http://elliot:3000/static/handler/relative-to-absolute-static-files-handler.js"]
 HTTP_HEADERS=[{"Accept-Language": "fr-CH"}]
-SECRET_KEY=
+API_KEY=
 BROWSERLESS_TOKEN=
