--- a/docs/docker/docker-compose.yml
+++ b/docs/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PERSIST_PERIOD: ${PERSIST_PERIOD}
       QUEUE_CONCURRENCY: ${QUEUE_CONCURRENCY}
       ADDITIONAL_SCRIPTS: ${ADDITIONAL_SCRIPTS}
-      SECRET_KEY: ${SECRET_KEY}
+      API_KEY: ${API_KEY}
       REDIS_URL: redis://redis:6379
       BROWSERLESS_ENDPOINT: ws://browserless:3000?token=${BROWSERLESS_TOKEN}
     ports:
