--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,6 @@ CLEANUP_JOB_AFTER_COLLECTED=false
 ENABLE_DASHBOARDS=true
 # ADDITIONAL_SCRIPTS=
 # HTTP_HEADERS=
-# SECRET_KEY=
+# API_KEY=
 # REDIS_URL
 # BROWSERLESS_ENDPOINT=
