--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,7 +40,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Login to GitHub Container Registry
+      -
+        name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -61,9 +62,21 @@ jobs:
         env:
           DSLIM_HTTP_PROBE: false
         with:
-          target: ${{ steps.meta.outputs.tags }}
-          tag: ${{ steps.meta.outputs.tags }}-slim
-      - name: Push slim image to the registry
+          target: valentinschabschneider/elliot:latest
+          tag: slim
+      - name: Re-tag slim image
         if: github.event_name != 'pull_request'
-        run: | 
-           docker push ${{ steps.meta.outputs.tags }}-slim
+        run: |
+          docker tag valentinschabschneider/elliot:slim ${{ steps.slimtag.outputs.tag }}-slim
+      - name: Re-tag and push slimmed image for all tags
+        if: github.event_name != 'pull_request'
+        run: |
+          tags="${{ steps.meta.outputs.tags }}"
+
+          while IFS= read -r tag; do
+            slim_tag="${tag}-slim"
+            echo "Tagging slim as $slim_tag"
+            docker tag valentinschabschneider/elliot:slim "$slim_tag"
+            echo "Pushing $slim_tag"
+            docker push "$slim_tag"
+          done <<< "$tags"
