--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@bull-board/api": "^6.9.6",
     "@bull-board/express": "^6.9.6",
+    "@bull-board/nestjs": "^6.9.6",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/bull": "^11.0.2",
     "@nestjs/common": "^11.1.3",
@@ -34,10 +35,11 @@
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.0",
     "axios": "^1.5.1",
-    "bull": "^4.10.4",
+    "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "env-var": "^7.3.0",
+    "express-basic-auth": "^1.2.1",
     "module": "^1.2.5",
     "pagedjs-cli": "^0.4.3",
     "passport": "^0.7.0",
