Migrated yarn to pnpm

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.0",
     "axios": "^1.5.1",
+    "body-parser": "^2.2.0",
     "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -47,6 +48,7 @@
     "passport-headerapikey": "^1.2.2",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
+    "puppeteer-core": "^24.10.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.2.0",
     "uuid": "^11.1.0"
@@ -91,6 +93,5 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
