--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,20 +3,18 @@ name: Docker Image CI
 on:
   push:
     tags:
-      - "v*"
+      - 'v*'
   pull_request:
     branches:
-      - "main"
+      - 'main'
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Docker meta
+      - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
         with:
@@ -27,52 +25,27 @@ jobs:
           # generate Docker tags based on the following events/attributes
           tags: |
             type=semver,pattern={{version}}
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Login to GitHub Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }} 
-      - name: Slim the image
-        if: github.event_name != 'pull_request'
-        uses: kitabisa/docker-slim-action@v1
-        env:
-          DSLIM_HTTP_PROBE: false
-        with:
-          target: valentinschabschneider/elliot:latest
-          tag: slim
-      - name: Re-tag and push slimmed image for all tags
-        if: github.event_name != 'pull_request'
-        run: |
-          tags="${{ steps.meta.outputs.tags }}"
-
-          while IFS= read -r tag; do
-            slim_tag="${tag}-slim"
-            echo "Tagging slim as $slim_tag"
-            docker tag valentinschabschneider/elliot:slim "$slim_tag"
-            echo "Pushing $slim_tag"
-            docker push "$slim_tag"
-          done <<< "$tags"
+          labels: ${{ steps.meta.outputs.labels }}
