--- a/docs/docker/.env.example
+++ b/docs/docker/.env.example
@@ -5,3 +5,4 @@ ADDITIONAL_SCRIPTS=["http://elliot:3000/static/handler/image-loading-handler.js"
 HTTP_HEADERS=[{"Accept-Language": "fr-CH"}]
 API_KEY=
 BROWSERLESS_TOKEN=
+BULL_BOARD_PASSWORD=admin
