--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "compress-pdf": "^0.5.5",
     "env-var": "^7.3.0",
     "express-basic-auth": "^1.2.1",
     "module": "^1.2.5",
